istio-sds-gateway/resources/fakeservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fakeservice
  name: fakeservice
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: fakeservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fakeservice
  name: fakeservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fakeservice
  template:
    metadata:
      labels:
        app: fakeservice
    spec:
      serviceAccountName: fakeservice
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"    
        - name: "NAME"
          value: "backend"      
        - name: "MESSAGE"
          value: "Hello from Fake Service!!"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: nicholasjackson/fake-service:v0.7.8
        imagePullPolicy: IfNotPresent
        name: fakeservice
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
