istio-sds-gateway/resources/v1-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-helloworld
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - hello-v1.35.239.201.203.xip.io
    tls:
      credentialName: hello-v1-cert 
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-helloworld
  namespace: istio-system
spec:
  hosts:
  - hello-v1.35.239.201.203.xip.io
  gateways:
  - gw-helloworld
  http:
  - match:
    - uri:
        exact: /
    rewrite:
      uri: /hello
    route:
    - destination:
        host: helloworld.hello-v1.svc.cluster.local
        port:
          number: 5000
